create the full series ejs front end with logic
fixed the comments further style changes well be added

fiexed the  share btn to copy link the add to watchlist button the favorates and the watched buttons but with no backend logic behind the

a star system of 10 satrs (rating) with epseode paginataion and season pagination
